--- a/index.html
+++ b/index.html
@@ -67,19 +67,23 @@
             <h2 class="title">Especialidades</h2>
             <div class="w33 left box-especialidade">
                 <h3><i class="fa-brands fa-css3"></i></h3>
-                <h3>css3</h3>
+                <h4>CSS3</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti est aliquid aperiam eveniet vel libero ex deserunt, nihil, consequuntur perferendis repudiandae harum dolor distinctio expedita! Vitae earum maxime nisi voluptas!</p>
             </div><!--box-especialidade-->
             <div class="w33 left box-especialidade">
                 <h3><i class="fa-brands fa-html5"></i></h3>
-                <h3>HTML5</h3>
+                <h4>HTML5</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti est aliquid aperiam eveniet vel libero ex deserunt, nihil, consequuntur perferendis repudiandae harum dolor distinctio expedita! Vitae earum maxime nisi voluptas!</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti est aliquid aperiam eveniet vel libero ex deserunt, nihil, consequuntur perferendis repudiandae harum dolor distinctio expedita! Vitae earum maxime nisi voluptas!</p>
             </div><!--box-especialidade-->
             <div class="w33 left box-especialidade">
                 <h3><i class="fa-brands fa-square-js"></i></h3>
-                <h3>javascript</h3>
+                <h4>Javascript</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti est aliquid aperiam eveniet vel libero ex deserunt, nihil, consequuntur perferendis repudiandae harum dolor distinctio expedita! Vitae earum maxime nisi voluptas!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti est aliquid aperiam eveniet vel libero ex deserunt, nihil, consequuntur perferendis repudiandae harum dolor distinctio expedita! Vitae earum maxime nisi voluptas!</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti est aliquid aperiam eveniet vel libero ex deserunt, nihil, consequuntur perferendis repudiandae harum dolor distinctio expedita! Vitae earum maxime nisi voluptas!</p>
             </div><!--box-especialidade-->
+            <div class="clear"></div><!--clear-->
         </div><!--center-->
     </section><!--especialidades-->
 
