deleted class foto

--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum explicabo porro ex maxime nemo saepe accusamus quo cum dolorem tenetur in, inventore voluptate nesciunt enim fuga laudantium quidem asperiores fugit?</p>
             </div><!--w50-->
             <div class="w50 left">
-                <div class="foto">
-                    <img class="right" src="./images/foto.jpeg" alt="">
-                </div><!--foto-->
+                <img class="right" src="./images/foto.jpeg" alt="">
             </div><!--w50-->
             <div class="clear"></div>
         </div><!--center-->
@@ -91,33 +89,35 @@
 
         <div class="center">
             <div class="w50 left">
-                <h2 class="title">Depoimentos</h2>
+                <h2 class="title">Depoimentos dos nosso clientes</h2>
                 <div class="depoimento-single">
                     <p class="depoimento-descricao">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni aspernatur molestiae eos aliquam inventore quo quos, iure porro atque provident temporibus ea tempora dolorem consequuntur facere veritatis nam. Sequi, fuga?
+                        "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni aspernatur molestiae eos aliquam inventore quo quos, iure porro atque provident temporibus ea tempora dolorem consequuntur facere veritatis nam. Sequi, fuga?"
                     </p>
                     <p class="nome-autor">Lorem Ipsum</p>
                 </div><!--deipomento-single-->
                 <div class="depoimento-single">
                     <p class="depoimento-descricao">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni aspernatur molestiae eos aliquam inventore quo quos, iure porro atque provident temporibus ea tempora dolorem consequuntur facere veritatis nam. Sequi, fuga?
+                        "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni aspernatur molestiae eos aliquam inventore quo quos, iure porro atque provident temporibus ea tempora dolorem consequuntur facere veritatis nam. Sequi, fuga?"
                     </p>
                     <p class="nome-autor">Lorem Ipsum</p>
                 </div><!--deipomento-single-->
                 <div class="depoimento-single">
                     <p class="depoimento-descricao">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni aspernatur molestiae eos aliquam inventore quo quos, iure porro atque provident temporibus ea tempora dolorem consequuntur facere veritatis nam. Sequi, fuga?
+                        "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni aspernatur molestiae eos aliquam inventore quo quos, iure porro atque provident temporibus ea tempora dolorem consequuntur facere veritatis nam. Sequi, fuga?"
                     </p>
                     <p class="nome-autor">Lorem Ipsum</p>
                 </div><!--deipomento-single-->
             </div><!--w50-->
             <div class="w50 left">
-                <h2 class="title">Seviços</h2>
+                <h3 class="title">Serviços</h3>
                 <div class="servicos">
                     <ul>
-                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
                     </ul>
                 </div><!--servicos-->
             </div><!--w50--> 
@@ -127,7 +127,7 @@
 
     <footer>
         <div class="center">
-            <p>Todos os direitos reservados</p>
+            <p>AlexandMag - Todos os direitos reservados</p>
         </div><!--center-->
     </footer>
 
