added jquery and js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="center">
-            <div class="logo left">AlexandMag</div>
+            <div class="logo left"><a href="/"><img src="./images/logo.png" alt="Logo AlexandMag"></a></div>
             <nav class="desktop right">
                 <ul>
                     <li><a href="">Home</a></li>
@@ -50,8 +50,10 @@
         <div class="center">
             <div class="w50 left">
                 <h2>Alexandre Magno</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum explicabo porro ex maxime nemo saepe accusamus quo cum dolorem tenetur in, inventore voluptate nesciunt enim fuga laudantium quidem asperiores fugit?</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum explicabo porro ex maxime nemo saepe accusamus quo cum dolorem tenetur in, inventore voluptate nesciunt enim fuga laudantium quidem asperiores fugit?</p>
+                <p>"Apaixonado por tecnologias e inovações, entrei no mundo da programação em 2019 através do Desenvolvimento Web, onde aprendi HTML, CSS.</p>
+                <p>Em 2021 iniciei o tão sonhado curso de Engenharia de Computação na PUC Minas, estou cursando o 4º período e já tive a oportunidade de aprender Lógica de Programação, C, C++ e SQL.</p>
+                <p>Atualmente estudando PHP e Javascript.</p>
+                <p>Agora estou em busca de uma oportunidade que amplie o que já sei e me ensine coisas novas."</p>
             </div><!--w50-->
             <div class="w50 left">
                 <img class="right" src="./images/foto.jpeg" alt="">
@@ -130,6 +132,7 @@
             <p>AlexandMag - Todos os direitos reservados</p>
         </div><!--center-->
     </footer>
-
+    <script src="jquery.js"></script>
+    <script src="./js/scripts.js"></script>
 </body>
 </html>
